[package]
name = "ultimate_cate_battle"
version = "0.1.0"
edition = "2021"

[dependencies]
# uncomment when building in release mode for a stand-alone binary
#bevy = { version = "0.12.0", features = ["webp", "wayland"] }
# uncomment when building in debug mode for faster compile times
bevy = { version = "0.12.0", features = ["webp", "wayland", "dynamic_linking"] }
bevy_cursor = "0.2.0"
bevy_editor_pls = "0.6.0"
bevy_egui = "0.23.0"
bevy_embedded_assets = "0.9.1"
bevy_mod_raycast = "0.16.0"
bevy_tweening = "0.9.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

